# hamster

./: .gitignore  Cargo.toml  Dockerfile  README.md  README_zh_template.md  auth-right.sh  docker-compose.yml  dockerize.sh
.github/workflows/: hamster.yml
docker/: build.sh  substrate_builder.Dockerfile
docs/: metadata.json
frame/auth-right/: Cargo.toml
frame/auth-right/src/: lib.rs  model.rs
frame/bags-list/src/list/: mod.rs
frame/burn/: Cargo.toml
frame/burn/src/: lib.rs
frame/chunkcycle/: Cargo.toml
frame/chunkcycle/src/: lib.rs
frame/gateway/: Cargo.toml
frame/gateway/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
frame/hamster-api/: Cargo.toml
frame/hamster-api/src/: lib.rs
frame/market/: Cargo.toml
frame/market/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
frame/provider/: Cargo.toml
frame/provider/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
frame/resource-order/: Cargo.toml
frame/resource-order/src/: benchmarking.rs  lib.rs  mock.rs  testing_utils.rs  tests.rs  weights.rs
frame/staking/: Cargo.toml
frame/staking/src/pallet/: impls.rs  mod.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/burn/: Cargo.toml
pallets/burn/src/: lib.rs  weights.rs
pallets/chunkcycle/: Cargo.toml
pallets/chunkcycle/src/: lib.rs
pallets/gateway/: Cargo.toml
pallets/gateway/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/market/: Cargo.toml
pallets/market/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs  weights2.rs
pallets/provider/: Cargo.toml
pallets/provider/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/resource-order/: Cargo.toml
pallets/resource-order/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/staking/: Cargo.toml
pallets/staking/src/: benchmarking.rs  inflation.rs  lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  weights2.rs
primitives/: Cargo.toml
primitives/hamster/: Cargo.toml
primitives/hamster/src/: constants.rs  lib.rs  p_chunkcycle.rs  p_deployment.rs  p_gateway.rs  p_market.rs  p_provider.rs  p_resource_order.rs
primitives/src/: constants.rs  lib.rs  p_chunkcycle.rs  p_gateway.rs  p_market.rs  p_provider.rs  p_resource_order.rs  p_staking.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
