[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'ttc-primitives'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'sp-debug-derive/std',
    "sp-core/std",
    'frame-system/std',
    'sp-std/std',
    'sp-runtime/std',
    "frame-support/std"
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.sp-debug-derive]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.serde]
optional = true
version = "1.0.101"

[dependencies.sp-core]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies]
serde_json = "1.0.59"



