[package]
name = "pallet-hamster-api"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "hamster api server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../benchmarking" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-hamster = { version = "4.0.0-dev", default-features = false, path = "../../primitives/hamster"}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
#sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-hamster/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-std/std',
	"scale-info/std",
#	"sp-io/std",
]

try-runtime = ["frame-support/try-runtime"]

