[package]
name = "pallet-provider"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "provider"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, optional = true, path = "../benchmarking" }
frame-support = { version = "4.0.0-dev", default-features = false, path = "../support" }
frame-system = { version = "4.0.0-dev", default-features = false, path = "../system" }
sp-core = { version = "6.0.0", default-features = false, path = "../../primitives/core" }
sp-runtime = { version = "6.0.0", default-features = false, path = "../../primitives/runtime" }
sp-std = { version = "4.0.0", default-features = false, path = "../../primitives/std" }
sp-hamster = { version = "4.0.0-dev", default-features = false, path = "../../primitives/hamster"}
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }

[dev-dependencies]
pallet-balances = { version = "4.0.0-dev", path = "../balances"}
pallet-gateway = { version = "4.0.0-dev", path = "../gateway"}
pallet-market = { version = "4.0.0-dev", path = "../market"}
pallet-chunkcycle = { version = "4.0.0-dev", path = "../chunkcycle"}
pallet-resource-order = { version = "4.0.0-dev", path = "../resource-order"}
pallet-timestamp = { version = "4.0.0-dev", default-features = false, path = "../timestamp"}
sp-io = { version = "6.0.0", default-features = false, path = "../../primitives/io" }

[features]
default = ["std"]
std = [
	'sp-hamster/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-core/std',
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'log/std',
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
