# [package]
# name = "pallet-staking"
# version = "3.0.0"
# authors = ["Parity Technologies <admin@parity.io>"]
# edition = "2018"
# license = "Apache-2.0"
# homepage = "https://substrate.dev"
# repository = "https://github.com/paritytech/substrate/"
# description = "FRAME pallet staking"
# readme = "README.md"

# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]

# [dependencies]
# static_assertions = "1.1.0"
# serde = { version = "1.0.101", optional = true }
# codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
# # sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
# # sp-io ={ version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # sp-staking = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # frame-system = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # pallet-session = { version = "3.0.0", default-features = false, features = ["historical"], git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # pallet-authorship = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # sp-application-crypto = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # frame-election-provider-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# log = { version = "0.4.14", default-features = false }
# paste = "1.0"

# [dependencies.sp-std]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.sp-io]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.sp-runtime]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'


# [dependencies.sp-staking]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.frame-support]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.frame-system]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.pallet-session]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.pallet-authorship]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.sp-application-crypto]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dependencies.frame-election-provider-support]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# # Optional imports for benchmarking
# # frame-benchmarking = { version = "3.1.0", default-features = false, path = "../benchmarking", optional = true }
# # frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# rand_chacha = { version = "0.2", default-features = false, optional = true }

# [dependencies.frame-benchmarking]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# optional = true
# tag = 'monthly-2021-07'
# version = '3.1.0'

# [dev-dependencies]
# # sp-storage = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # sp-tracing = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # pallet-timestamp = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # pallet-staking-reward-curve = { version = "3.0.0",  git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # substrate-test-utils = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# # frame-election-provider-support = { version = "3.0.0", features = ["runtime-benchmarks"], git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
# rand_chacha = { version = "0.2" }
# parking_lot = "0.11.1"
# hex = "0.4"

# [dev-dependencies.sp-storage]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dev-dependencies.sp-tracing]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dev-dependencies.sp-core]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dev-dependencies.pallet-balances]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dev-dependencies.pallet-timestamp]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dev-dependencies.substrate-test-utils]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'

# [dev-dependencies.frame-benchmarking]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.1.0'

# [dev-dependencies.frame-election-provider-support]
# default-features = false
# git = 'https://github.com/paritytech/substrate.git'
# tag = 'monthly-2021-07'
# version = '3.0.0'



# [features]
# default = ["std"]
# std = [
# 	"serde",
# 	"codec/std",
# 	"sp-std/std",
# 	"sp-io/std",
# 	"frame-support/std",
# 	"sp-runtime/std",
# 	"sp-staking/std",
# 	"pallet-session/std",
# 	"frame-system/std",
# 	"pallet-authorship/std",
# 	"sp-application-crypto/std",
# 	"log/std",
# 	"frame-election-provider-support/std",
# ]
# runtime-benchmarks = [
# 	"frame-benchmarking",
# 	"frame-election-provider-support/runtime-benchmarks",
# 	"rand_chacha",
# ]
# try-runtime = ["frame-support/try-runtime"]

[package]
name = "pallet-staking"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet staking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = {version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
sp-io ={ version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
sp-staking = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
frame-system = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
pallet-session = { version = "3.0.0", default-features = false, features = ["historical"], git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
pallet-authorship = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
sp-application-crypto = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
frame-election-provider-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
pallet-gateway = {version = "3.0.0", path = "../gateway", default-features = false}
pallet-provider = {version = "3.0.0", path = "../provider", default-features = false}
pallet-market = {version = "3.0.0", path = "../market", default-features = false}
primitives = {version = "3.0.0", path = "../../primitives", default-features = false, package="ttc-primitives"}
log = { version = "0.4.14", default-features = false }
paste = "1.0"


# Optional imports for benchmarking
frame-benchmarking = { version = "3.1.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07', optional = true }
rand_chacha = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
rand_chacha = { version = "0.2" }
sp-storage = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
sp-tracing = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07' }
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
pallet-timestamp = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
pallet-staking-reward-curve = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
substrate-test-utils = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
frame-election-provider-support = { version = "3.0.0", features = ["runtime-benchmarks"], git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-07'}
parking_lot = "0.11.1"
hex = "0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"sp-application-crypto/std",
	"log/std",
	"frame-election-provider-support/std",
	"pallet-provider/std",
	"pallet-gateway/std",
	"pallet-market/std",
	'primitives/std',
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-election-provider-support/runtime-benchmarks",
	"rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]